crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__declarations-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let x = (a, b) => a + b;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..24,
                pattern: Ident(
                    BindingIdent {
                        span: 4..5,
                        id: Ident {
                            span: 4..5,
                            name: "x",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Lambda(
                        Lambda {
                            span: 8..23,
                            params: [
                                EFnParam {
                                    pat: Ident(
                                        EFnParamBindingIdent {
                                            span: 9..10,
                                            id: Ident {
                                                span: 9..10,
                                                name: "a",
                                            },
                                        },
                                    ),
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                                EFnParam {
                                    pat: Ident(
                                        EFnParamBindingIdent {
                                            span: 12..13,
                                            id: Ident {
                                                span: 12..13,
                                                name: "b",
                                            },
                                        },
                                    ),
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                            ],
                            body: Op(
                                Op {
                                    span: 18..23,
                                    op: Add,
                                    left: Ident(
                                        Ident {
                                            span: 18..19,
                                            name: "a",
                                        },
                                    ),
                                    right: Ident(
                                        Ident {
                                            span: 22..23,
                                            name: "b",
                                        },
                                    ),
                                },
                            ),
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
