crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__declarations.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let x = 5;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..10,
                pattern: Ident(
                    BindingIdent {
                        span: 4..5,
                        id: Ident {
                            span: 4..5,
                            name: "x",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Lit(
                        Num(
                            Num {
                                span: 8..9,
                                value: "5",
                            },
                        ),
                    ),
                ),
                declare: false,
            },
        ],
    },
)
