crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__decls-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"   let x = 5\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 3..12,
                pattern: Ident(
                    BindingIdent {
                        span: 7..8,
                        id: Ident {
                            span: 7..8,
                            name: "x",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Lit(
                        Num(
                            Num {
                                span: 11..12,
                                value: "5",
                            },
                        ),
                    ),
                ),
                declare: false,
            },
        ],
    },
)
