crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__decls-3.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"declare let x: number\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 12..21,
                pattern: Ident(
                    BindingIdent {
                        span: 12..13,
                        id: Ident {
                            span: 12..13,
                            name: "x",
                        },
                    },
                ),
                type_ann: Some(
                    Prim(
                        PrimType {
                            span: 15..21,
                            prim: Num,
                        },
                    ),
                ),
                init: None,
                declare: true,
            },
        ],
    },
)
