crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__decls-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"declare let foo: Foo<string>\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 8..28,
                pattern: Ident(
                    BindingIdent {
                        span: 12..15,
                        id: Ident {
                            span: 12..15,
                            name: "foo",
                        },
                    },
                ),
                type_ann: Some(
                    TypeRef(
                        TypeRef {
                            span: 17..28,
                            name: "Foo",
                            type_params: Some(
                                [
                                    Prim(
                                        PrimType {
                                            span: 21..27,
                                            prim: Str,
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ),
                init: None,
                declare: true,
            },
        ],
    },
)
