crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__destructuring-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let {a, b, ...rest} = letters;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..30,
                pattern: Object(
                    ObjectPat {
                        span: 4..19,
                        props: [
                            Assign(
                                AssignPatProp {
                                    span: 5..6,
                                    key: Ident {
                                        span: 5..6,
                                        name: "a",
                                    },
                                    value: None,
                                },
                            ),
                            Assign(
                                AssignPatProp {
                                    span: 8..9,
                                    key: Ident {
                                        span: 8..9,
                                        name: "b",
                                    },
                                    value: None,
                                },
                            ),
                            Rest(
                                RestPat {
                                    span: 11..18,
                                    arg: Ident(
                                        BindingIdent {
                                            span: 14..18,
                                            id: Ident {
                                                span: 14..18,
                                                name: "rest",
                                            },
                                        },
                                    ),
                                },
                            ),
                        ],
                        optional: false,
                    },
                ),
                type_ann: None,
                init: Some(
                    Ident(
                        Ident {
                            span: 22..29,
                            name: "letters",
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
