crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__destructuring-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let [a, b, ...rest] = letters;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..30,
                pattern: Array(
                    ArrayPat {
                        span: 4..19,
                        elems: [
                            Some(
                                Ident(
                                    BindingIdent {
                                        span: 5..6,
                                        id: Ident {
                                            span: 5..6,
                                            name: "a",
                                        },
                                    },
                                ),
                            ),
                            Some(
                                Ident(
                                    BindingIdent {
                                        span: 8..9,
                                        id: Ident {
                                            span: 8..9,
                                            name: "b",
                                        },
                                    },
                                ),
                            ),
                            Some(
                                Rest(
                                    RestPat {
                                        span: 11..18,
                                        arg: Ident(
                                            BindingIdent {
                                                span: 14..18,
                                                id: Ident {
                                                    span: 14..18,
                                                    name: "rest",
                                                },
                                            },
                                        ),
                                    },
                                ),
                            ),
                        ],
                        optional: false,
                    },
                ),
                type_ann: None,
                init: Some(
                    Ident(
                        Ident {
                            span: 22..29,
                            name: "letters",
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
